# blink_sim

./: .gitignore  README.md  environment.yml  main.py
configs/: ade20k_train_test_split.json  ade20k_train_test_split.json.bk  blinkflow_v1_example.yaml  blinkflow_v2.yaml  cc_textures_diffuse.json  default_blender_settings.yaml  dorf_curves.json  flickr.json  google_scanned.json  pixabay.json  shapenet_example.json
configs/example/: ade20k_example.json  blinkflow_v2_example.yaml  shapenet_example.json
download_script/: download_cc_textures.py  download_flickr.py  download_haven.py  download_pixabay.py
scripts/: download_hf_data.py  download_hf_data_v2.py  start_xserver.py
src/: event_viz.py  flow_viz.py  hdr2ldr.py  time_utils.py  traj_viz.py  utils.py  video2event.py  voxel_grid.py
src/blender/: animation.py  blender_script.py  env.py  flow_utils.py  launcher.py  movement.py  object_pool.py  particle.py  simulate_physics.py  trajectory.py  utils.py  video_corr.py  visHdf5Files.py
src/blender/tree_gen/: tree.py
src/blender/tree_gen/parametric/: gen.py
src/dvs_voltmeter/: simulator.py  simulator_utils.py
src/esim/: CMakeLists.txt  esim.cpp  esim.h  test.py  utils.h
src/v2e/: emulator.py  emulator_linear_ts.py  emulator_utils.py
